@@ -805,6 +805,7 @@ A few extra bits of information are available that don't appear in the /set list
 <blockquote>
 	<table border=0 cellpadding=5>
 	<tr><td width="18%">state_cursor</td><td>Current input-box cursor position (characters, not bytes). Since 2.4.2.</td></tr>
+	<tr><td width="18%">id</td><td>Unique server id. Since 2.6.1.</td></tr>
 	</table>
 </blockquote>
 <br><b>Arguments:</b>
