@@ -40,6 +40,8 @@ Where "NUMBER" is the bug number.
  - The textevents GUI has been re-written to use GtkTreeView.
  - Randomized DNS lookups on Mac OS X on hostnames that return
    multiple IP numbers (SG / CL).
+ - Added a dialog window to help newbies join a channel.
+ - Plugin API: Added "id" to xchat_get_prefs (Khisanth).
  - 
  - 
  - Perl:
